--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Welcome to my first website!</h1>   
     <p>This is a sample webpage created by me.</p>
+    <i>This may not be good enough but atleast I did it.</i>
     <p id="message"></p>
     <script src="script.js"></script>
 </body>
